--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
     <main class="main">
       <label class="search" for="search__input">
           <input class="search__input" type="text" id="search_input" placeholder="Search for a world"/>
-          <button class="search__btn" type="submit">
-            <ion-icon class="search__btn--icon" name="search-outline"></ion-icon>
+          <button class="search__btn" type="submit" id="btn">
+            <ion-icon class="search__btn--icon" name="search-outline" ></ion-icon>
           </button>
         </label>
         <section class="results">
           <!-- <p class="welcome__text">What word do you want to look up?</p> -->
-          <div class="results__word">
+          <!-- <div class="spinner">
+            <div class="custom-loader"></div>
+          </div> -->
+
+          <!-- <div class="results__word">
             <div class="results__word--heading">
               <h1>Class</h1>
               <p>/Klahs/</p>
@@ -30,10 +34,34 @@
               </button>
             </div>
           </div>
-          <hr>
+          <hr> -->
+
+          <!-- <div class="results__defination">
+            <h2>Noun</h2>
+            <span>Meaning</span>
+            <ol class="results__defination--list">
+              <li>A group, collection, category or set sharing characteristics or attributes.</li>
+              <li>A group, collection, category or set sharing characteristics or attributes.</li>
+              <li>A group, collection, category or set sharing characteristics or attributes.</li>
+            </ol>
+
+            <div class="results__defination--verb">
+            <h2>Verb</h2>
+            <span>Meaning</span>
+            <ol class="results__defination--list">
+              <li>A group, collection, category or set sharing characteristics or attributes.</li>
+              <li>A group, collection, category or set sharing characteristics or attributes.</li>
+              <li>A group, collection, category or set sharing characteristics or attributes.</li>
+            </ol>
+          </div>
+          </div> -->
         </section>
       </form>
     </main>
+
+    <footer>
+      created by Jamiu Abdulkareem <a href="http://twitter.com/Jhayone1_2">Twitter</a>
+    </footer>
 
     <script defer src="js/script.js"></script>
   </body>
