--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           </button>
         </label>
         <section class="results">
-          <!-- <p class="welcome__text">What word do you want to look up?</p> -->
-          
+          <p class="welcome__text">What word do you want to look up?</p>
+
           <!-- <div class="spinner">
             <div class="custom-loader"></div>
           </div> -->
