--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="main">
       <form >
       <label class="search" for="search__input">
-          <input class="search__input" type="text" id="search_input" placeholder="Search for a world"/>
+          <input class="search__input" type="text" id="search_input" placeholder="Search for a word"/>
           <button class="search__btn" type="submit" id="btn">
             <ion-icon class="search__btn--icon" name="search-outline" ></ion-icon>
           </button>
