--- a/index.html
+++ b/index.html
@@ -1,76 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dictionary | Jamiu Abidemi</title>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Vite + React</title>
   </head>
   <body>
-    <main class="main">
-      <form >
-      <label class="search" for="search__input">
-          <input class="search__input" type="text" id="search_input" placeholder="Search for a word"/>
-          <button class="search__btn" type="submit" id="btn">
-            <ion-icon class="search__btn--icon" name="search-outline" ></ion-icon>
-          </button>
-        </label>
-      </form>
-        <section class="results">
-          <p class="welcome__text">What word do you want to look up?</p>
-
-          <!-- <div class="errorMsg">
-            <ion-icon name="warning-outline"></ion-icon>
-            <p>We could not find definitions for the word you were looking for <br> You can try the search again or head to the web instead.</p>
-          </div> -->
-
-          <!-- <div class="spinner">
-            <div class="custom-loader"></div>
-          </div> -->
-
-          <!-- <div class="results__word">
-            <div class="results__word--heading">
-              <h1>Class</h1>
-              <p>/Klahs/</p>
-            </div>
-            <div>
-              <button class="results__word-play--btn">
-                <ion-icon class="results__word-play--btn-icon" name="play"></ion-icon>
-              </button>
-            </div>
-          </div>
-          <hr> -->
-
-          <!-- <div class="results__defination">
-            <h2>Noun</h2>
-            <span>Meaning</span>
-            <ol class="results__defination--list">
-              <li>A group, collection, category or set sharing characteristics or attributes.</li>
-              <li>A group, collection, category or set sharing characteristics or attributes.</li>
-              <li>A group, collection, category or set sharing characteristics or attributes.</li>
-            </ol>
-
-            <div class="results__defination--verb">
-            <h2>Verb</h2>
-            <span>Meaning</span>
-            <ol class="results__defination--list">
-              <li>A group, collection, category or set sharing characteristics or attributes.</li>
-              <li>A group, collection, category or set sharing characteristics or attributes.</li>
-              <li>A group, collection, category or set sharing characteristics or attributes.</li>
-            </ol>
-          </div>
-          </div> -->
-        </section>
-      </form>
-    </main>
-
-    <footer>
-      created by Jamiu Abdulkareem <a href="http://twitter.com/Jhayone1_2">Twitter</a>
-    </footer>
-
-    <script defer src="js/script.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
